[gd_scene load_steps=3 format=3 uid="uid://c8sac25vjpl1x"]

[ext_resource type="Texture2D" uid="uid://c26qatnkr8yc5" path="res://Assets/menuBackground.png" id="1_7tagf"]
[ext_resource type="Script" uid="uid://csy2lm0sp3p8o" path="res://Scenes/NukeSabotage/nuke_sabotage.gd" id="1_krkij"]

[node name="NukeSabotage" type="Window"]
disable_3d = true
canvas_item_default_texture_filter = 0
initial_position = 1
size = Vector2i(800, 800)
transient = true
transient_to_focused = true
unresizable = true
script = ExtResource("1_krkij")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 800.0
texture = ExtResource("1_7tagf")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="MiniGameNode" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.26
anchor_top = 0.26
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 296.0
offset_top = 296.0
offset_right = -300.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
